Add log-safety test cases for records